tests/toylang/neg/001192_mutation.toylang
program a = { program a = { } . a do sleep; } .
